# i2c-lcd-controller

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
api/: index.html
docs/: api.md  index.md  license.md
i2c_lcd/: lcd.py
lcd/: i2c_lcd.py  test.py
license/: index.html
test/: test.py
